# capirci

./: .dockerignore  .env  .flake8  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.dev.yml  links.md  manage.py  operator1_nofile.xml  operator1_pippo.xml  operator1_pluto.xml  package-lock.json  package.json  pyproject.toml  sqlite.db  vite.config.ts
app/: XML_utilities.py  admin.py  apps.py  function.py  main_dialog.py  models.py  relation_states.py  robot_functions.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_task_code_alter_action_robot_alter_location_robot_and_more.py  0003_alter_task_code.py  0004_alter_action_robot_alter_location_robot_and_more.py  0005_alter_task_code.py
app/static/css/: chat.css
app/static/js/: chat.js  home.js  jquery-ui.js  pluralize.js  qrcodeReader.js  task.js
app/templates/: base.html  chat.html  home.html  react-page.html
app/templates/registration/: logged_out.html  login.html
app/utils/: render_react_page.py  response.py  string.py  xml.py
assets/: .babelrc  .eslintrc.json  .prettierrc  assets.d.ts  package-lock.json  package.json  tsconfig.json
assets/src/: app.tsx  index.tsx  store.ts
assets/src/redux/: graphic.ts  index.ts  serverStatus.ts  token.ts
assets/src/services/: api.ts  authentication.ts
assets/src/style/: colors.ts  global.ts  theme.ts
assets/src/utils/: formUtils.ts  iconMap.tsx  index.ts  localStorageUtils.ts  messages.ts  pageContext.ts  useIdRef.ts  usePageContext.ts
backend/: admin.py  endpoints.py  function.py  models.py  relation_states.py  urls.py  views.py
backend/functions/: auth.py  chat.py  libraries.py  management.py  robot.py
backend/migrations/: 0001_initial.py  0002_task_code_alter_action_robot_alter_location_robot_and_more.py  0003_alter_task_code.py  0004_alter_action_robot_alter_location_robot_and_more.py  0005_alter_task_code.py  0006_alter_task_owner.py  0007_object_contour_object_photo_object_shape.py  0008_rename_point_action_positions.py  0009_positionfield_remove_location_position.py
backend/poetry_scripts/: server.py
backend/static/css/: home.css
backend/static/js/: chat.js  parsing_xml_to_graphic.js  task.js
backend/templates/: base.html  home.html  task.html
backend/templatetags/: render_vite_bundle.py
backend/utils/: response.py  string.py  xml.py
django_project_conf/: settings.py  urls.py
docker/dev/: Dockerfile
frontend/: .eslintrc  index.html  tsconfig.json
frontend/public/: global.css
frontend/src/: index.tsx
frontend/src/assets/: AuthBackground.tsx  assets.d.ts
frontend/src/components/: Dot.tsx  Loadable.tsx  Loader.tsx  MainCard.tsx  SimpleBar.tsx  ToastContainer.tsx  Transitions.tsx
frontend/src/menu-items/: avanzate.ts  generale.ts  gestione.ts  index.ts  libraries.ts  management.ts  types.ts  (+2 more)
natural2/: urls.py
project/: settings.py  urls.py  wsgi.py
prova/: main_dialog.py  relation_states.py  robot_functions.py  views.py
scripts/: server.py
(+173 files in other folders)
