[tool.poetry]
name = "capirci"
version = "0.1.0"
description = "Chat And Program Industrial Robots through Convenient Interaction"
authors = ["Luigi Gargioni <luigi.gargioni@gmail.com>"]
packages = [
    { include="scripts", from="." },
]

[tool.poetry.scripts]
start = "scripts.server:run"

[tool.poetry.dependencies]
django = "^4.1"
django-cors-headers = "^3.13.0"
django-mysql = "^4.7.1"
docutils = "^0.19"
nltk = "^3.7"
numpy = "^1.23.2"
opencv-python = "^4.6.0.66"
pillow = "^9.2.0"
python = "^3.10.6"
pythonping = "^1.1.3"
pytz = "^2022.2.1"
pywin32 = "^304"
stanza = "^1.4.0"
word2number = "^1.1"

[tool.poetry.dev-dependencies]
black = "22.3.0"
flake8 = "^4.0.1"
poetryup = "^0.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
