[tool.poetry]
name = "capirci"
version = "0.1.0"
description = "Chat And Program Industrial Robots through Convenient Interaction"
authors = ["Luigi Gargioni <luigi.gargioni@gmail.com>"]
packages = [
    { include="scripts", from="." },
]

[tool.poetry.scripts]
start = "scripts.server:run"

[tool.poetry.dependencies]
django = "^4.1.6"
django-cors-headers = "^3.13.0"
django-mysql = "^4.8.0"
docutils = "^0.19"
nltk = "^3.8.1"
numpy = "^1.24.2"
opencv-python = "^4.7.0.68"
pillow = "^9.4.0"
python = "^3.10.10"
pythonping = "^1.1.4"
pytz = "^2022.7.1"
pywin32 = "^305"
stanza = "^1.4.2"
word2number = "^1.1"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
flake8 = "^4.0.1"
poetryup = "^0.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
