[tool.poetry]
name = "capirci"
version = "0.0.1"
description = "Chat And Program Industrial Robots through Convenient Interaction"
authors = ["Luigi Gargioni <luigi.gargioni@gmail.com>"]
maintainers = ["Luigi Gargioni <luigi.gargioni@gmail.com>"]
readme = "README.md"
homepage = "http://localhost:8000/"
repository = "https://github.com/luigigargioni/capirci"
documentation = "https://github.com/luigigargioni/capirci#readme"
packages = [
    { include="poetry_scripts", from="./backend" },
]

[tool.poetry.scripts]
start = "backend.poetry_scripts.server:run"
collectstatic = "backend.poetry_scripts.server:collectstatic"

[tool.poetry.dependencies]
django = "^4.2.2"
django-cors-headers = "^3.14.0"
django-mysql = "^4.10.0"
docutils = "^0.19"
nltk = "^3.8.1"
numpy = "^1.25.0"
opencv-python = "^4.7.0.72"
pillow = "^9.5.0"
python = "^3.11.4"
pythonping = "^1.1.4"
pytz = "^2022.7.1"
pywin32 = "^305"
stanza = "^1.5.0"
word2number = "^1.1"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
flake8 = "^4.0.1"
poetryup = "^0.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"